--- a/Assignment_1-Artem_Iermak/Assignment1.Master
+++ b/Assignment_1-Artem_Iermak/Assignment1.Master
@@ -16,7 +16,8 @@
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
 
-
+        <!-- Custom style -->
+        <link rel="stylesheet" href="customStyle.css" />
     <asp:ContentPlaceHolder ID="head" runat="server">
        
     </asp:ContentPlaceHolder>
